crates/tree-sitter-specforge/test/corpus/behavior.txt
==================
Behavior with verify
==================

behavior BEH-SF-010 "Parse Spec File" {
  invariants [INV-SF-2]
  types [SpecFile, ParseError]
  ports [SourceParser]

  contract """
    Given a valid .spec file, produce an AST.
  """

  verify unit "parse valid file"
  verify integration "end to end"
}

---

(source_file
  (behavior_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (list
        (entity_id)))
    (key_value
      key: (identifier)
      value: (list
        (identifier)
        (identifier)))
    (key_value
      key: (identifier)
      value: (list
        (identifier)))
    (key_value
      key: (identifier)
      value: (triple_quoted_string))
    (verify_statement
      kind: (identifier)
      description: (string))
    (verify_statement
      kind: (identifier)
      description: (string))))
