crates/tree-sitter-specforge/test/corpus/comments.txt
==================
Comments between blocks
==================

// Core invariants

invariant INV-SF-1 "Test" {
  guarantee """
    Test guarantee.
  """
}

// Another comment

---

(source_file
  (comment)
  (invariant_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (triple_quoted_string)))
  (comment))
