crates/tree-sitter-specforge/test/corpus/event.txt
==================
Event block with payload
==================

event EVT-SF-001 "File Parsed" {
  trigger BEH-SF-010
  channel "compiler.file_parsed"

  payload {
    filePath string
    entityCount integer
  }

  consumers [BEH-SF-020, BEH-SF-025]
}

---

(source_file
  (event_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (entity_id))
    (key_value
      key: (identifier)
      value: (string))
    (key_value
      key: (identifier)
      value: (nested_block
        (key_value
          key: (identifier)
          value: (identifier))
        (key_value
          key: (identifier)
          value: (identifier))))
    (key_value
      key: (identifier)
      value: (list
        (entity_id)
        (entity_id)))))
