crates/tree-sitter-specforge/test/corpus/governance.txt
==================
Decision block
==================

decision ADR-001 "Use Tree-sitter" {
  status accepted
  date 2026-03-01
  context """
    Need a parser for the DSL.
  """
  decision """
    Use Tree-sitter from day 1.
  """
  consequences ["Fast parsing", "Error recovery"]
  invariants [INV-SF-2]
}

---

(source_file
  (decision_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (identifier))
    (key_value
      key: (identifier)
      value: (date_literal))
    (key_value
      key: (identifier)
      value: (triple_quoted_string))
    (key_value
      key: (identifier)
      value: (triple_quoted_string))
    (key_value
      key: (identifier)
      value: (list
        (string)
        (string)))
    (key_value
      key: (identifier)
      value: (list
        (entity_id)))))

==================
Constraint with verify
==================

constraint CON-SF-001 "Parse Performance" {
  category performance
  priority must
  metric """
    Parser must complete within 100ms.
  """
  affects [BEH-SF-010]

  verify load "benchmark parser"
}

---

(source_file
  (constraint_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (identifier))
    (key_value
      key: (identifier)
      value: (identifier))
    (key_value
      key: (identifier)
      value: (triple_quoted_string))
    (key_value
      key: (identifier)
      value: (list
        (entity_id)))
    (verify_statement
      kind: (identifier)
      description: (string))))

==================
Failure mode with nested post_mitigation
==================

failure_mode FM-SF-001 "Stale Graph" {
  invariant INV-SF-7
  severity 8
  occurrence 3
  detection 4
  rpn 96
  cause "File watcher misses event"
  effect "Graph has stale nodes"
  mitigation "Full rebuild on watch error"

  post_mitigation {
    severity 8
    occurrence 1
    detection 2
    rpn 16
  }
}

---

(source_file
  (failure_mode_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (entity_id))
    (key_value
      key: (identifier)
      value: (integer))
    (key_value
      key: (identifier)
      value: (integer))
    (key_value
      key: (identifier)
      value: (integer))
    (key_value
      key: (identifier)
      value: (integer))
    (key_value
      key: (identifier)
      value: (string))
    (key_value
      key: (identifier)
      value: (string))
    (key_value
      key: (identifier)
      value: (string))
    (key_value
      key: (identifier)
      value: (nested_block
        (key_value
          key: (identifier)
          value: (integer))
        (key_value
          key: (identifier)
          value: (integer))
        (key_value
          key: (identifier)
          value: (integer))
        (key_value
          key: (identifier)
          value: (integer))))))
