crates/tree-sitter-specforge/test/corpus/invariant.txt
==================
Invariant block
==================

invariant INV-SF-1 "Spec Root Singleton" {
  guarantee """
    Exactly one spec block MUST exist.
  """
  enforced_by [Parser, Resolver]
  risk medium
}

---

(source_file
  (invariant_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (triple_quoted_string))
    (key_value
      key: (identifier)
      value: (list
        (identifier)
        (identifier)))
    (key_value
      key: (identifier)
      value: (identifier))))
