crates/tree-sitter-specforge/test/corpus/ref.txt
==================
Ref inline
==================

ref gh.issue:42 "Login bug"

---

(source_file
  (ref_block
    (ref_inline
      id: (scheme_ref_id)
      title: (string))))

==================
Ref block with metadata
==================

ref figma.frame:abc123 "Login Screen" {
  url "https://figma.com/file/abc123"
  status reviewed
}

---

(source_file
  (ref_block
    (ref_full
      id: (scheme_ref_id)
      title: (string)
      (key_value
        key: (identifier)
        value: (string))
      (key_value
        key: (identifier)
        value: (identifier)))))
