crates/tree-sitter-specforge/test/corpus/roadmap.txt
==================
Roadmap with criteria and status
==================

roadmap RM-02 "Phase 2" {
  status planned
  behaviors [50, 99]
  features [FEAT-SF-010, FEAT-SF-011]

  criteria [
    "LSP provides diagnostics",
    "Code generation works",
  ]
}

---

(source_file
  (roadmap_block
    id: (entity_id)
    title: (string)
    (key_value
      key: (identifier)
      value: (identifier))
    (key_value
      key: (identifier)
      value: (list
        (integer)
        (integer)))
    (key_value
      key: (identifier)
      value: (list
        (entity_id)
        (entity_id)))
    (key_value
      key: (identifier)
      value: (list
        (string)
        (string)))))
